tests-integration/tests/roundtrip/invalid/semantic_errors/typecheck/bool_in_arith_list/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic_errors/typecheck/bool_in_arith_list/bool_in_arith_list.essence:3:22:
  |
3 | such that sum([1, 2, b, 4]) = x
  |                      ^
Type error:
	Expected: int
	Got: bool

